refactor: 코드 리뷰 반영 - 경미한 개선사항 적용
- User: 미사용 BaseEntity import 제거
- Point: validateBalance 파라미터명 shadowing 해소 (balance → initialBalance)
- ProductService: Collectors.toList() → Stream.toList() 통일, getProductForOrder readOnly = true 추가
- OrderService: 재고 차감 루프에서 총 금액 동시 계산으로 인덱스 기반 이중 루프 제거
- Order: discountAmount 음수 입력 검증 추가
- Like: 생성자 null 검증 추가
- PointFacade: 불필요한 후행 빈 줄 제거

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>